--- a/projects.html
+++ b/projects.html
@@ -35,10 +35,15 @@
         <div class="project-section fade-in">
           <div class="project-content">
             <div class="video-container">
-              <video controls width="100%" height="auto">
-                <source src="assets/videos/proshop.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-              </video>
+              <iframe
+                width="100%"
+                height="480"
+                src="https://www.youtube.com/embed/zEVdCVPqkLE"
+                title="Personal Pro Shop"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen>
+              </iframe>
             </div>
             <div class="project-description">
               <h3>Purpose</h3>
@@ -76,10 +81,15 @@
         <div class="project-section fade-in">
           <div class="project-content">
             <div class="video-container">
-              <video controls width="100%" height="auto">
-                <source src="assets/videos/bikebuddy.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-              </video>
+              <iframe
+                width="100%"
+                height="480"
+                src="https://www.youtube.com/embed/gFzeUuE-1pc"
+                title="Bike Buddy"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen>
+              </iframe>
             </div>
             <div class="project-description">
               <h3>Purpose</h3>
@@ -125,10 +135,15 @@
         <div class="project-section fade-in">
           <div class="project-content">
             <div class="video-container">
-              <video controls width="100%" height="auto">
-                <source src="assets/videos/ballbeam.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-              </video>
+              <iframe
+                width="100%"
+                height="480"
+                src="https://www.youtube.com/embed/G44B1elHLV0"
+                title="Ball and Beam"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen>
+              </iframe>
             </div>
             <div class="project-description">
               <h3>Achievement</h3>
