--- a/about.html
+++ b/about.html
@@ -88,6 +88,9 @@
           <a href="https://www.linkedin.com/in/joseph-pongonthara" target="_blank" rel="noopener" aria-label="LinkedIn Profile">
             <img src="assets/icons/linkedin.svg" alt="LinkedIn Icon" class="footer-icon" />
           </a>
+          <a href="https://github.com/josephpongonthara" target="_blank" rel="noopener" aria-label="GitHub Profile">
+            <img src="assets/icons/github.svg" alt="GitHub Icon" class="footer-icon" />
+          </a>
         </div>  
       </div>
     </footer>
