--- a/personal.html
+++ b/personal.html
@@ -34,6 +34,12 @@
                 Joseph Pongonthara
                 </a>
             </p>
+            <p>
+                <a href="https://github.com/josephpongonthara" target="_blank">
+                <img src="assets/icons/github.svg" alt="GitHub Icon" class="contact-icon" />
+                josephpongonthara
+                </a>
+            </p>
         </main>
         <footer class="site-footer fade-in">
             <div class="footer-content">
