re-ordering pro shop code

--- a/projects.html
+++ b/projects.html
@@ -63,13 +63,13 @@
               <span class="btn green"></span>
             </div>
             <div class="code-tabs">
-              <button class="tab active" data-file="assets/code/proshop/racket_scraping.py" data-lang="python">racket-scraping.py</button>
-              <button class="tab" data-file="assets/code/proshop/string_scraping.py" data-lang="python">string-scraping.py</button>
-              <button class="tab" data-file="assets/code/proshop/proxy-server.js" data-lang="JavaScript">proxy-server.js</button>
+              <button class="tab active" data-file="assets/code/proshop/proxy-server.js" data-lang="JavaScript">proxy-server.js</button>
               <button class="tab" data-file="assets/code/proshop/PageOne.jsx" data-lang="JavaScript XML">PageOne.jsx</button>
               <button class="tab" data-file="assets/code/proshop/PageTwo.jsx" data-lang="JavaScript XML">PageTwo.jsx</button>
               <button class="tab" data-file="assets/code/proshop/App.jsx" data-lang="JavaScript XML">App.jsx</button>
               <button class="tab" data-file="assets/code/proshop/index.js" data-lang="JavaScript">index.js</button>
+              <button class="tab" data-file="assets/code/proshop/racket_scraping.py" data-lang="python">racket-scraping.py</button>
+              <button class="tab" data-file="assets/code/proshop/string_scraping.py" data-lang="python">string-scraping.py</button>
             </div>
           </div>
           <pre class="code-content"><code class="language-python code-block">Loading...</code></pre>
