adding more tools + downloadable resume

--- a/about.html
+++ b/about.html
@@ -76,7 +76,39 @@
             <img src="assets/images/solidworks.png" alt="SolidWorks" />
             <div class="overlay"><p>Bike Buddy (Capstone)<br>Search & Rescue Robot</p></div>
           </div>
-        </div>
+          <div class = "tool-logo">
+            <img src="assets/images/sql.png" alt="SQL" />
+            <div class="overlay"><p>Personal Pro Shop<br>Tenuto Labs Internship</p></div>
+          </div>
+          <div class = "tool-logo">
+            <img src="assets/images/supabase.png" alt="Supabase" />
+            <div class="overlay"><p>Tenuto Labs Internship</p></div>
+          </div>
+          <div class = "tool-logo">
+            <img src="assets/images/react.jpg" alt="REACT" />
+            <div class="overlay"><p>Personal Pro Shop<br>Tenuto Labs Internship</p></div>
+          </div>
+          <div class = "tool-logo">
+            <img src="assets/images/rest.png" alt="REST API" />
+            <div class="overlay"><p>Personal Pro Shop<br>Tenuto Labs Internship</p></div>
+          </div>
+          <div class = "tool-logo">
+            <img src="assets/images/next.png" alt="Next.js" />
+            <div class="overlay"><p>Tenuto Labs Internship</p></div>
+          </div>
+          <div class = "tool-logo">
+            <img src="assets/images/graphql.png" alt="GraphQL" />
+            <div class="overlay"><p>Tenuto Labs Internship</p></div>
+          </div>
+          <div class = "tool-logo">
+            <img src="assets/images/embeded-c.png" alt="Embedded C" />
+            <div class="overlay"><p>Bike Buddy (Capstone)<br>Ball & Beam Controller<br>Search & Rescue Robot</p></div>
+          </div>
+          <div class = "tool-logo">
+            <img src="assets/images/typescript.png" alt="TypeScript" />
+            <div class="overlay"><p>Tenuto Labs Internship</p></div>
+          </div>
+
     </section>
     <footer class="site-footer fade-in">
       <div class="footer-content">
@@ -91,6 +123,9 @@
           <a href="https://github.com/josephpongonthara" target="_blank" rel="noopener" aria-label="GitHub Profile">
             <img src="assets/icons/github.svg" alt="GitHub Icon" class="footer-icon" />
           </a>
+          <a href="assets/resume/Joseph_Pongonthara.pdf" target=""_blank" rel="noopener" aria-label="Download Resume">
+            <img src="assets/icons/resume.svg" alt="Resume Icon" class="footer-icon" />
+          </a> 
         </div>  
       </div>
     </footer>
