--- a/personal.html
+++ b/personal.html
@@ -40,6 +40,12 @@
                 josephpongonthara
                 </a>
             </p>
+            <p>
+                <a href="assets/resume/Joseph_Pongonthara.pdf" target="_blank" rel="noopener">
+                <img src="assets/icons/resume.svg" alt="Resume Icon" class="contact-icon" />
+                Download Resume
+                </a>
+            </p>
         </main>
         <footer class="site-footer fade-in">
             <div class="footer-content">
