--- a/projects.html
+++ b/projects.html
@@ -254,6 +254,9 @@
           <a href="https://github.com/josephpongonthara" target="_blank" rel="noopener" aria-label="GitHub Profile">
             <img src="assets/icons/github.svg" alt="GitHub Icon" class="footer-icon" />
           </a>
+          <a href="assets/resume/Joseph_Pongonthara.pdf" target=""_blank" rel="noopener" aria-label="Download Resume">
+            <img src="assets/icons/resume.svg" alt="Resume Icon" class="footer-icon" />
+          </a> 
         </div>
       </div>
     </footer>
