--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
             <div class="overlay"><p>Tenuto Labs Internship</p></div>
           </div>
           <div class = "tool-logo">
-            <img src="assets/images/react.jpg" alt="REACT" />
+            <img src="assets/images/react.webp" alt="REACT" />
             <div class="overlay"><p>Personal Pro Shop<br>Tenuto Labs Internship</p></div>
           </div>
           <div class = "tool-logo">
